# Soap-Server/src/main/java/services/IRecipeBookService.java
@@ -31,6 +31,7 @@ public interface IRecipeBookService {
 	@WebMethod(operationName = "deleteRecipeBook") //nombre de la operacion
     @WebResult(name = "ResultadoOperacion") //nombre de donde nos va a dejar el resultado
 	String deleteRecipeBook(@WebParam(name = "idRecipeBook") int idRecipeBook);
+	
 	// ----------------Recipe_in_RecipeBook----------------
 	
 	@WebMethod(operationName = "addRecipeInRecipeBook") //nombre de la operacion
@@ -39,7 +40,7 @@ public interface IRecipeBookService {
 	
 	@WebMethod(operationName = "getRecipeInRecipeBookById") //nombre de la operacion
     @WebResult(name = "ResultadoOperacion") //nombre de donde nos va a dejar el resultado
-	List<Recipe_in_RecipeBook> getRecipeInRecipeBookById(@WebParam(name = "id_recipe_book") int id_recipe_book);
+	List<Recipe_in_RecipeBook> getRecipeInRecipeBookById(@WebParam(name = "id_recipe_book") int id_recipe_book);//pongo el id recetario y me muestra las recetas
 	
 	@WebMethod(operationName = "deleteRecipefromRecipeBook") //nombre de la operacion
     @WebResult(name = "ResultadoOperacion") //nombre de donde nos va a dejar el resultado
